--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link
         href="https://fonts.googleapis.com/css?family=Lemonada:300|Nanum+Brush+Script|Patrick+Hand+SC|Press+Start+2P|Raleway+Dots&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="common/reset.css">
-        <link rel="stylesheet" href="common/Header.css">
-        <link rel="stylesheet" href="common/footer.css">
-    <link rel="stylesheet" href="common/style.css">
+        <link rel="stylesheet" href="./common/reset.css">
+        <link rel="stylesheet" href="./common/Header.css">
+        <link rel="stylesheet" href="./common/footer.css">
+    <link rel="stylesheet" href="./common/style.css">
     <link rel="stylesheet" href="./PokeExplore/PokeList.css">
 
 </head>
