--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="./common/Header.css">
         <link rel="stylesheet" href="./common/footer.css">
     <link rel="stylesheet" href="./common/style.css">
+    <link rel="stylesheet" href="./common/footer.css">
     <link rel="stylesheet" href="./PokeExplore/PokeList.css">
 
 </head>
