--- a/poke.html
+++ b/poke.html
@@ -11,7 +11,8 @@
     />
     <link rel="stylesheet" href="./common/reset.css" />
     <link rel="stylesheet" href="./common/style.css" />
-    <link rel="stylesheet" href="./common/Header.css" />
+    <link rel="stylesheet" href="./common/Header.css"/>
+    <link rel="stylesheet" href="./common/footer.css">
     <link rel="stylesheet" href="./PokeExplore/PokeList.css" />
   </head>
   <body>
