paging page no button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="./common/footer.css">
     <link rel="stylesheet" href="./common/style.css">
     <link rel="stylesheet" href="./common/footer.css">
+    <link rel="stylesheet" href="./PokeExplore/Paging.css">
     <link rel="stylesheet" href="./PokeExplore/PokeList.css">
 
 </head>
