fixed home page index page still not rendering right name

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <link rel="stylesheet" href="./common/footer.css">
     <link rel="stylesheet" href="./common/style.css">
     <link rel="stylesheet" href="./common/footer.css">
-    <link rel="stylesheet" href="./PokeExplore/Paging.css">
-    <link rel="stylesheet" href="./PokeExplore/PokeList.css">
+    <!-- <link rel="stylesheet" href="./PokeExplore/Paging.css">
+    <link rel="stylesheet" href="./PokeExplore/PokeList.css"> -->
 
 </head>
 <a href="./index.html"></a>
 
 <body>
 
-    <script type="module" src="./PokeExplore/index.js"></script>
+    <script type="module" src="./home/index.js"></script>
 </body>
 
 </html>
