--- a/poke.html
+++ b/poke.html
@@ -9,12 +9,13 @@
       href="https://fonts.googleapis.com/css?family=Lemonada:300|Nanum+Brush+Script|Patrick+Hand+SC|Press+Start+2P|Raleway+Dots&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./common/reset.css" />
-    <link rel="stylesheet" href="./common/style.css" />
-    <link rel="stylesheet" href="./common/Header.css"/>
-    <link rel="stylesheet" href="./common/footer.css">
-    <link rel="stylesheet" href="./PokeExplore/Paging.css">
-    <link rel="stylesheet" href="./PokeExplore/PokeList.css" />
+    <link rel="stylesheet" href="../common/reset.css" />
+    <link rel="stylesheet" href="../common/style.css" />
+    <link rel="stylesheet" href="../common/Header.css"/>
+    <link rel="stylesheet" href="../common/footer.css">
+    <link rel="stylesheet" href="../PokeExplore/Paging.css">
+    <link rel="stylesheet" href="../PokeExplore/PokeList.css"/>
+   
   </head>
   <body>
     <script src="./PokeExplore/index.js" type="module"></script>
