--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <link rel="stylesheet" href="./common/footer.css">
     <link rel="stylesheet" href="./common/style.css">
     <link rel="stylesheet" href="./common/footer.css">
-    <!-- <link rel="stylesheet" href="./PokeExplore/Paging.css">
-    <link rel="stylesheet" href="./PokeExplore/PokeList.css"> -->
+    <link rel="stylesheet" href="./PokeExplore/Paging.css">
+    <link rel="stylesheet" href="./PokeExplore/PokeList.css">
 
 </head>
 <a href="./index.html"></a>
