trying to run heroku

--- a/public/PokeExplore/index.html
+++ b/public/PokeExplore/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <script type="module" src="./home/index.js"></script>
+    <script type="module" src="../home/index.js"></script>
 </body>
 
 </html>
