--- a/public/PokeExplore/poke.html
+++ b/public/PokeExplore/poke.html
@@ -11,13 +11,14 @@
     />
     <link rel="stylesheet" href="../common/reset.css" />
     <link rel="stylesheet" href="../common/style.css" />
-    <link rel="stylesheet" href="../common/Header.css"/>
     <link rel="stylesheet" href="../common/footer.css">
-    <link rel="stylesheet" href="../PokeExplore/Paging.css">
-    <link rel="stylesheet" href="../PokeExplore/PokeList.css"/>
+    <link rel="stylesheet" href="../common/Header.css">
+    <link rel="stylesheet" href="./Paging.css">
+    <link rel="stylesheet" href="./PokeList.css">
+    <link rel="stylesheet" href="../home/HomeApp.css">
    
   </head>
   <body>
-    <script src="./PokeExplore/index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
